--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.50 Kernel Configuration
+# Linux/arm 3.0.66 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -184,11 +184,16 @@ CONFIG_BLK_DEV_BSG=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -322,6 +327,7 @@ CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
 # CONFIG_MACH_JAGUAR is not set
 # CONFIG_MACH_JASPER is not set
 # CONFIG_MACH_GOGH is not set
+# CONFIG_MACH_INFINITE is not set
 # CONFIG_MACH_ACCELERATE is not set
 CONFIG_MACH_APEXQ=y
 # CONFIG_MACH_AEGIS2 is not set
@@ -339,7 +345,9 @@ CONFIG_MACH_APEXQ=y
 # CONFIG_MACH_M2_ATT is not set
 # CONFIG_MACH_M2_SKT is not set
 # CONFIG_MACH_M2_DCM is not set
+# CONFIG_MACH_K2_KDI is not set
 # CONFIG_MACH_STRETTO is not set
+# CONFIG_MACH_SUPERIORLTE_SKT is not set
 # CONFIG_MACH_MSM8960_LIQUID is not set
 CONFIG_DMUX_LA1_5=y
 CONFIG_MACH_APQ8064_SIM=y
@@ -385,6 +393,7 @@ CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_BAM_DMUX=y
+# CONFIG_MSM_BAM_DMUX_NOLOCK is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=y
@@ -450,8 +459,8 @@ CONFIG_MSM_JTAG=y
 CONFIG_MSM_QDSS=y
 CONFIG_MSM_QDSS_ETM_DEFAULT_ENABLE=y
 CONFIG_CLOCK_MAP=y
-CONFIG_MSM_SLEEP_STATS=y
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
+CONFIG_MSM_RUN_QUEUE_STATS=y
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -468,8 +477,9 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_RTB is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
-# CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
+# CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 # CONFIG_MSM_L1_ERR_LOG is not set
+# CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
 # CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CACHE_DUMP is not set
@@ -480,6 +490,7 @@ CONFIG_MSM_DCVS_FOR_MSM8260A=y
 # CONFIG_SEC_SSR_DEBUG_LEVEL_CHK is not set
 CONFIG_MSM_DCVS=y
 CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS=y
+CONFIG_MSM_CPU_PWRCTL=y
 
 #
 # System MMU
@@ -1210,38 +1221,6 @@ CONFIG_SAMSUNG_JACK=y
 # CONFIG_TI_ST is not set
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
-# CONFIG_MPU_SENSORS_TIMERIRQ_NEW is not set
-CONFIG_INV_SENSORS=y
-CONFIG_MPU_SENSORS_MPU3050_NEW=y
-# CONFIG_MPU_SENSORS_MPU6050A2 is not set
-# CONFIG_MPU_SENSORS_MPU6050B1 is not set
-# CONFIG_MPU_SENSORS_MPU3050_GYRO is not set
-CONFIG_MPU_SENSORS_MPU6050_GYRO=y
-CONFIG_MPU_SENSORS_ACCELEROMETER_NONE_NEW=y
-# CONFIG_MPU_SENSORS_ADXL34X is not set
-# CONFIG_MPU_SENSORS_BMA150_NEW is not set
-# CONFIG_MPU_SENSORS_BMA222_NEW is not set
-# CONFIG_MPU_SENSORS_BMA250_NEW is not set
-# CONFIG_MPU_SENSORS_KXSD9_NEW is not set
-# CONFIG_MPU_SENSORS_KXTF9_NEW is not set
-# CONFIG_MPU_SENSORS_LIS331DLH_NEW is not set
-# CONFIG_MPU_SENSORS_LIS3DH_NEW is not set
-# CONFIG_MPU_SENSORS_LSM303DLHA_NEW is not set
-# CONFIG_MPU_SENSORS_MMA8450_NEW is not set
-# CONFIG_MPU_SENSORS_MMA845X_NEW is not set
-# CONFIG_MPU_SENSORS_COMPASS_NONE_NEW is not set
-CONFIG_MPU_SENSORS_AK8975_NEW=y
-# CONFIG_MPU_SENSORS_MMC314X_NEW is not set
-# CONFIG_MPU_SENSORS_AMI30X_NEW is not set
-# CONFIG_MPU_SENSORS_AMI306_NEW is not set
-# CONFIG_MPU_SENSORS_HMC5883_NEW is not set
-# CONFIG_MPU_SENSORS_LSM303DLHM_NEW is not set
-# CONFIG_MPU_SENSORS_YAS529_NEW is not set
-# CONFIG_MPU_SENSORS_YAS530_NEW is not set
-# CONFIG_MPU_SENSORS_HSCDTD002B_NEW is not set
-# CONFIG_MPU_SENSORS_HSCDTD004A_NEW is not set
-CONFIG_MPU_SENSORS_PRESSURE_NONE_NEW=y
-# CONFIG_MPU_SENSORS_BMA085_NEW is not set
 CONFIG_MPU_SENSORS_TIMERIRQ_411=y
 CONFIG_INV_SENSORS_411=y
 # CONFIG_MPU_SENSORS_MPU3050_411 is not set
@@ -1391,13 +1370,10 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_LIBRA_SDIOIF is not set
 CONFIG_WCNSS_CORE=y
+# CONFIG_WCNSS_MEM_PRE_ALLOC is not set
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4329 is not set
 # CONFIG_BCMDHD is not set
-# CONFIG_BCM4330 is not set
-# CONFIG_BCM4334 is not set
-# CONFIG_BCM43241 is not set
-# CONFIG_WLAN_COUNTRY_CODE is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -1861,6 +1837,8 @@ CONFIG_PM8921_SEC_CHARGER=y
 # CONFIG_BATTERY_SEC is not set
 CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_WIRELESS_CHARGING is not set
+# CONFIG_BATTERY_SAMSUNG_STRETTO is not set
+# CONFIG_BATTERY_MAX17047_FUELGAUGE is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_SENSORS_WPCE775X is not set
@@ -2657,7 +2635,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 CONFIG_USB_STORAGE_DETECT=y
 
@@ -2996,6 +2973,7 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_POHMELFS is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
@@ -3032,6 +3010,7 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 #
 CONFIG_PRIMA_WLAN=m
 CONFIG_PRIMA_WLAN_BTAMP=y
+# CONFIG_HTC_WIFI_NVS is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -3152,7 +3131,7 @@ CONFIG_WTL_ENCRYPTION_FILTER=y
 # CONFIG_HPFS_FS is not set
 # CONFIG_QNX4FS_FS is not set
 # CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
+CONFIG_PSTORE=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
@@ -3263,7 +3242,9 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_SHIRQ is not set
 CONFIG_LOCKUP_DETECTOR=y
-# CONFIG_HARDLOCKUP_DETECTOR is not set
+# CONFIG_HARDLOCKUP_DETECTOR_NMI is not set
+CONFIG_HARDLOCKUP_DETECTOR_OTHER_CPU=y
+CONFIG_HARDLOCKUP_DETECTOR=y
 # CONFIG_BOOTPARAM_HARDLOCKUP_PANIC is not set
 CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=0
 # CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC is not set
