--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -2263,7 +2263,7 @@ CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
 # CONFIG_VIDEO_MHL_V1 is not set
 CONFIG_VIDEO_MHL_V2=y
-# CONFIG_MHL_D3_SUPPORT is not set
+CONFIG_MHL_D3_SUPPORT=y
 CONFIG_MHL_NEW_CBUS_MSC_CMD=y
 CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
