--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -418,19 +418,29 @@ header-y += msm_vidc_enc.h
 header-y += msm_audio.h
 header-y += msm_audio_aac.h
 header-y += msm_audio_acdb.h
-header-y += android_pmem.h
+header-y += msm_audio_amrnb.h
+header-y += msm_audio_amrwb.h
+header-y += msm_audio.h
+header-y += msm_audio_qcp.h
 header-y += msm_audio_wma.h
 header-y += msm_audio_wmapro.h
-header-y += msm_audio_mvs.h
-header-y += msm_audio_qcp.h
-header-y += msm_audio_amrnb.h
-header-y += msm_audio_voicememo.h
-header-y += msm_audio_sbc.h
-header-y += msm_ipc.h
 header-y += msm_charm.h
+header-y += msm_ipc.h
+header-y += msm_kgsl.h
+header-y += msm_mdp.h
+header-y += msm_rmnet.h
+header-y += msm_rotator.h
+header-y += msm_smd_pkt.h
+header-y += msm_ssbi.h
+header-y += msm_tsens.h
+header-y += msm_vidc_dec.h
+header-y += msm_vidc_enc.h
+header-y += android_pmem.h
+header-y += ashmem.h
+header-y += genlock.h
+header-y += ion.h
+header-y += qcedev.h
 header-y += tzcom.h
 header-y += qseecom.h
 header-y += qcedev.h
 header-y += idle_stats_device.h
-header-y += genlock.h
-header-y += msm_audio_amrwb.h
