--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.37 Kernel Configuration
+# Linux/arm 3.4.41 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -1941,7 +1941,7 @@ CONFIG_PM8XXX_CCADC=y
 # CONFIG_PM8921_BMS is not set
 CONFIG_PM8921_SEC_CHARGER=y
 CONFIG_BATTERY_CTIA=y
-CONFIG_BATTERY_SEC=y
+# CONFIG_BATTERY_SEC is not set
 CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_WIRELESS_CHARGING is not set
 # CONFIG_BATTERY_SAMSUNG_STRETTO is not set
@@ -3522,6 +3522,20 @@ CONFIG_DEBUG_LL_UART_NONE=y
 # CONFIG_DEBUG_LL_UART is not set
 # CONFIG_DEBUG_ICEDCC is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
+
+#
+# Samsung Debugging Feature
+#
+CONFIG_SEC_DEBUG=y
+CONFIG_SEC_DEBUG_SCHED_LOG=y
+CONFIG_SEC_DEBUG_SEMAPHORE_LOG=y
+CONFIG_SEC_DEBUG_USER=y
+CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
+CONFIG_SEC_DEBUG_MSG_LOG=y
+CONFIG_SEC_DEBUG_SUBSYS=y
+CONFIG_SEC_DEBUG_DCVS_LOG=y
+CONFIG_SEC_DEBUG_FUELGAUGE_LOG=y
+CONFIG_SEC_DEBUG_LOW_LOG=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_PID_IN_CONTEXTIDR=y
 
