--- a/sound/soc/msm/Makefile
+++ b/sound/soc/msm/Makefile
@@ -55,12 +55,14 @@ obj-$(CONFIG_SND_SOC_MSM8X60) += snd-soc-lpass-dma.o
 # for MSM 8960 sound card driver
 
 obj-$(CONFIG_SND_SOC_MSM_QDSP6_INTF) += qdsp6/
+ccflags-$(CONFIG_SND_SOC_MSM_QDSP6_INTF) += -DDEBUG
 
 snd-soc-qdsp6-objs := msm-dai-q6.o msm-pcm-q6.o msm-multi-ch-pcm-q6.o msm-lowlatency-pcm-q6.o msm-pcm-routing.o msm-dai-fe.o msm-compr-q6.o
 obj-$(CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO) += msm-dai-q6-hdmi.o
 obj-$(CONFIG_SND_SOC_VOICE) += msm-pcm-voice.o msm-pcm-voip.o
 snd-soc-qdsp6-objs += msm-pcm-lpa.o msm-pcm-afe.o
 obj-$(CONFIG_SND_SOC_QDSP6) += snd-soc-qdsp6.o
+ccflags-$(CONFIG_SND_SOC_QDSP6) += -DDEBUG
 
 ifdef CONFIG_MACH_M2_ATT
 snd-soc-msm8960-objs := msm8960-d2.o
@@ -97,8 +99,10 @@ snd-soc-msm8960-objs := msm8960-jaguar.o
 else
 snd-soc-msm8960-objs := msm8960-jaguar.o
 endif
+ccflags-soc-msm8960-objs := -DDEBUG
 
 obj-$(CONFIG_SND_SOC_MSM8960) += snd-soc-msm8960.o
+ccflags-$(CONFIG_SND_SOC_MSM8960) += -DDEBUG
 
 # Generic MSM drivers
 snd-soc-hostless-pcm-objs := msm-pcm-hostless.o
