Disable RAMOOPS; causes __arm_ioremap_pfn_caller Warning:
[    1.255272] [<c0015a20>] (unwind_backtrace+0x0/0xec) from [<c0740324>] (dump_stack+0x20/0x24)
[    1.263909] [<c0740324>] (dump_stack+0x20/0x24) from [<c00783e4>] (warn_slowpath_common+0x5c/0x74)
[    1.272852] [<c00783e4>] (warn_slowpath_common+0x5c/0x74) from [<c0078428>] (warn_slowpath_null+0x2c/0x34)
[    1.282466] [<c0078428>] (warn_slowpath_null+0x2c/0x34) from [<c001d2d0>] (__arm_ioremap_pfn_caller+0x12c/0x1cc)
[    1.292629] [<c001d2d0>] (__arm_ioremap_pfn_caller+0x12c/0x1cc) from [<c001d3fc>] (__arm_ioremap_caller+0x64/0x6c)
[    1.302914] [<c001d3fc>] (__arm_ioremap_caller+0x64/0x6c) from [<c001d0d0>] (__arm_ioremap+0x24/0x2c)
[    1.312040] [<c001d0d0>] (__arm_ioremap+0x24/0x2c) from [<c0c10f30>] (printk_remap_nocache+0x3c/0x19c)
[    1.321410] [<c0c10f30>] (printk_remap_nocache+0x3c/0x19c) from [<c0008844>] (do_one_initcall+0xa0/0x170)
[    1.330932] [<c0008844>] (do_one_initcall+0xa0/0x170) from [<c0c00a68>] (kernel_init+0x104/0x1c4)
[    1.340027] [<c0c00a68>] (kernel_init+0x104/0x1c4) from [<c000f6a8>] (kernel_thread_exit+0x0/0x8)

--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -474,6 +474,7 @@ CONFIG_MSM_PIL_VIDC=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
+# CONFIG_SEC_SSR_DUMP is not set
 CONFIG_MSM_WCNSS_SSR_8960=y
 # CONFIG_MSM_GSS_SSR_8064 is not set
 CONFIG_MSM_BUSPM_DEV=m
@@ -1780,7 +1781,7 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_DCC_TTY is not set
-CONFIG_RAMOOPS=y
+# CONFIG_RAMOOPS is not set
 CONFIG_MSM_ROTATOR=y
 CONFIG_MSM_ADSPRPC=m
 # CONFIG_MMC_GENERIC_CSDIO is not set
