--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -25,7 +25,7 @@ CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
-# CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_NEED_MACH_IO_H=y
 CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x80200000
@@ -3527,16 +3527,14 @@ CONFIG_DEBUG_LL_UART_NONE=y
 #
 # Samsung Debugging Feature
 #
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-CONFIG_SEC_DEBUG_SEMAPHORE_LOG=y
-CONFIG_SEC_DEBUG_USER=y
-CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
-CONFIG_SEC_DEBUG_MSG_LOG=y
-CONFIG_SEC_DEBUG_SUBSYS=y
-CONFIG_SEC_DEBUG_DCVS_LOG=y
-CONFIG_SEC_DEBUG_FUELGAUGE_LOG=y
-CONFIG_SEC_DEBUG_LOW_LOG=y
+# CONFIG_SEC_DEBUG is not set
+# CONFIG_SEC_DEBUG_USER is not set
+# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
+# CONFIG_SEC_DEBUG_MSG_LOG is not set
+# CONFIG_SEC_DEBUG_SUBSYS is not set
+# CONFIG_SEC_DEBUG_DCVS_LOG is not set
+# CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
+# CONFIG_SEC_DEBUG_LOW_LOG is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_PID_IN_CONTEXTIDR=y
 
