--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1848,7 +1848,7 @@ CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPMI is not set
 CONFIG_SLIMBUS=y
-CONFIG_SLIMBUS_MSM_CTRL=y
+# CONFIG_SLIMBUS_MSM_CTRL is not set
 # CONFIG_HSI is not set
 
 #
@@ -1869,7 +1869,7 @@ CONFIG_SLIMBUS_MSM_CTRL=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-# CONFIG_DEBUG_GPIO is not set
+CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -1888,7 +1888,8 @@ CONFIG_GPIO_MSM_V2=y
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCF857X is not set
 CONFIG_GPIO_SX150X=y
-# CONFIG_GPIO_ADP5588 is not set
+CONFIG_GPIO_ADP5588=y
+CONFIG_GPIO_ADP5588_IRQ=y
 
 #
 # PCI GPIO expanders:
