--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1298,7 +1298,7 @@ CONFIG_MPU_SENSORS_MPU6050B1_411=y
 CONFIG_INV_SENSORS_ACCELEROMETERS=y
 CONFIG_MPU_SENSORS_MPU6050_ACCEL_411=y
 CONFIG_INV_SENSORS_COMPASS=y
-CONFIG_MPU_SENSORS_AK8975_411=y
+# CONFIG_MPU_SENSORS_AK8975_411 is not set
 # CONFIG_MPU_SENSORS_AK8972_411 is not set
 # CONFIG_MPU_SENSORS_MMC314X_411 is not set
 # CONFIG_MPU_SENSORS_AMI30X_411 is not set
@@ -1306,7 +1306,7 @@ CONFIG_MPU_SENSORS_AK8975_411=y
 # CONFIG_MPU_SENSORS_HMC5883_411 is not set
 # CONFIG_MPU_SENSORS_LSM303DLX_M_411 is not set
 # CONFIG_MPU_SENSORS_MMC314XMS_411 is not set
-# CONFIG_MPU_SENSORS_YAS530_411 is not set
+CONFIG_MPU_SENSORS_YAS530_411=y
 # CONFIG_MPU_SENSORS_HSCDTD002B_411 is not set
 # CONFIG_MPU_SENSORS_HSCDTD004A_411 is not set
 # CONFIG_MPU_USERSPACE_DEBUG is not set
@@ -2125,7 +2125,7 @@ CONFIG_MFD_PM8XXX=y
 CONFIG_MFD_PM8921_CORE=y
 # CONFIG_MFD_PM8821_CORE is not set
 # CONFIG_MFD_PM8018_CORE is not set
-CONFIG_MFD_PM8038_CORE=y
+# CONFIG_MFD_PM8038_CORE is not set
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
 # CONFIG_MFD_TPS65090 is not set
