dont use CONFIG_MPU_SENSORS_YAS530_411

--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1306,7 +1306,7 @@ CONFIG_INV_SENSORS_COMPASS=y
 # CONFIG_MPU_SENSORS_HMC5883_411 is not set
 # CONFIG_MPU_SENSORS_LSM303DLX_M_411 is not set
 # CONFIG_MPU_SENSORS_MMC314XMS_411 is not set
-CONFIG_MPU_SENSORS_YAS530_411=y
+# CONFIG_MPU_SENSORS_YAS530_411 is not set
 # CONFIG_MPU_SENSORS_HSCDTD002B_411 is not set
 # CONFIG_MPU_SENSORS_HSCDTD004A_411 is not set
 # CONFIG_MPU_USERSPACE_DEBUG is not set
