sanitize audio code; engage DDEBUG

--- a/sound/soc/msm/Makefile
+++ b/sound/soc/msm/Makefile
@@ -57,6 +57,7 @@ obj-$(CONFIG_SND_SOC_MSM8X60) += snd-soc-lpass-dma.o
 obj-$(CONFIG_SND_SOC_MSM_QDSP6_INTF) += qdsp6/
 
 snd-soc-qdsp6-objs := msm-dai-q6.o msm-pcm-q6.o msm-multi-ch-pcm-q6.o msm-lowlatency-pcm-q6.o msm-pcm-routing.o msm-dai-fe.o msm-compr-q6.o msm-dai-stub.o
+ccflags-soc-qdsp6-objs += -DDEBUG
 obj-$(CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO) += msm-dai-q6-hdmi.o
 obj-$(CONFIG_SND_SOC_VOICE) += msm-pcm-voice.o msm-pcm-voip.o
 snd-soc-qdsp6-objs += msm-pcm-lpa.o msm-pcm-afe.o
@@ -97,7 +98,9 @@ snd-soc-msm8960-objs := msm8960-jaguar.o
 else
 snd-soc-msm8960-objs := msm8960-jaguar.o
 endif
+ccflags-soc-msm8960-objs += -DDEBUG
 obj-$(CONFIG_SND_SOC_MSM8960) += snd-soc-msm8960.o
+ccflags-$(CONFIG_SND_SOC_MSM8960) += -DDEBUG
 
 # Generic MSM drivers
 snd-soc-hostless-pcm-objs := msm-pcm-hostless.o
