--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -433,7 +433,7 @@ CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
 CONFIG_MSM_SMD_PKT=y
-# CONFIG_MSM_DSPS is not set
+CONFIG_MSM_DSPS=y
 # CONFIG_MSM_ONCRPCROUTER is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
@@ -448,7 +448,7 @@ CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
 CONFIG_WIFI_CONTROL_FUNC=y
-# CONFIG_WIFI_MEM_PREALLOC is not set
+CONFIG_WIFI_MEM_PREALLOC=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
@@ -466,7 +466,7 @@ CONFIG_MSM_PIL_LPASS_QDSP6V5=y
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
 CONFIG_MSM_PIL_RIVA=y
 CONFIG_MSM_PIL_TZAPPS=y
-# CONFIG_MSM_PIL_DSPS is not set
+CONFIG_MSM_PIL_DSPS=y
 CONFIG_MSM_PIL_VIDC=y
 # CONFIG_MSM_PIL_VENUS is not set
 # CONFIG_MSM_PIL_GSS is not set
@@ -515,7 +515,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_OCMEM is not set
 # CONFIG_MSM_RTB is not set
-# CONFIG_MSM_EBI_ERP is not set
+CONFIG_MSM_EBI_ERP=y
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
 # CONFIG_MSM_L1_ERR_LOG is not set
@@ -1822,9 +1822,9 @@ CONFIG_I2C_QUP=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
-# CONFIG_I2C_DEBUG_CORE is not set
-# CONFIG_I2C_DEBUG_ALGO is not set
-# CONFIG_I2C_DEBUG_BUS is not set
+CONFIG_I2C_DEBUG_CORE=y
+CONFIG_I2C_DEBUG_ALGO=y
+CONFIG_I2C_DEBUG_BUS=y
 CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
@@ -3435,7 +3435,8 @@ CONFIG_TIMER_STATS=y
 # CONFIG_SLUB_STATS is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_PREEMPT is not set
-# CONFIG_DEBUG_RT_MUTEXES is not set
+CONFIG_DEBUG_RT_MUTEXES=y
+CONFIG_DEBUG_PI_LIST=y
 # CONFIG_RT_MUTEX_TESTER is not set
 CONFIG_DEBUG_SPINLOCK=y
 CONFIG_DEBUG_MUTEXES=y
@@ -3528,13 +3529,15 @@ CONFIG_DEBUG_LL_UART_NONE=y
 #
 # Samsung Debugging Feature
 #
-# CONFIG_SEC_DEBUG is not set
+CONFIG_SEC_DEBUG=y
+# CONFIG_SEC_DEBUG_SCHED_LOG is not set
+# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
 # CONFIG_SEC_DEBUG_USER is not set
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
+CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
 # CONFIG_SEC_DEBUG_MSG_LOG is not set
 # CONFIG_SEC_DEBUG_SUBSYS is not set
 # CONFIG_SEC_DEBUG_DCVS_LOG is not set
-# CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
+CONFIG_SEC_DEBUG_FUELGAUGE_LOG=y
 # CONFIG_SEC_DEBUG_LOW_LOG is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_PID_IN_CONTEXTIDR=y
