--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -3535,7 +3535,7 @@ CONFIG_SEC_DEBUG=y
 # CONFIG_SEC_DEBUG_USER is not set
 CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
 # CONFIG_SEC_DEBUG_MSG_LOG is not set
-# CONFIG_SEC_DEBUG_SUBSYS is not set
+CONFIG_SEC_DEBUG_SUBSYS=y
 # CONFIG_SEC_DEBUG_DCVS_LOG is not set
 CONFIG_SEC_DEBUG_FUELGAUGE_LOG=y
 # CONFIG_SEC_DEBUG_LOW_LOG is not set
