--- a/sound/soc/msm/qdsp6/Makefile
+++ b/sound/soc/msm/qdsp6/Makefile
@@ -1,2 +1,4 @@
 obj-y := q6asm.o q6adm.o q6afe.o
 obj-$(CONFIG_SND_SOC_VOICE) += q6voice.o
+ccflags-y += -DDEBUG
+obj-$(CONFIG_SND_SOC_VOICE) += q6voice.o
