--- a/drivers/base/Makefile
+++ b/drivers/base/Makefile
@@ -1,5 +1,5 @@
 # Makefile for the Linux device tree
-
+ccflags-y		+= -DDEBUG
 obj-y			:= core.o bus.o dd.o syscore.o \
 			   driver.o class.o platform.o \
 			   cpu.o firmware.o init.o map.o devres.o \
