--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -411,6 +411,7 @@ header-y += android_pmem.h
 header-y += ashmem.h
 header-y += genlock.h
 header-y += idle_stats_device.h
+header-y += ion.h
 header-y += msm_adsp.h
 header-y += msm_audio.h
 header-y += msm_audio_aac.h
