--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -386,9 +386,6 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
-CONFIG_MSM_HAS_DEBUG_UART_HS=y
-CONFIG_DEBUG_MSM8960_UART=y
-# CONFIG_DEBUG_APQ8064_UART is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
@@ -481,6 +478,7 @@ CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
+CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
@@ -516,6 +514,7 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_EBI_ERP is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
+# CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 # CONFIG_MSM_L1_ERR_LOG is not set
 # CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
 # CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
@@ -1465,6 +1464,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_MPPE=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPPOE is not set
+# CONFIG_PPPOL2TP is not set
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 # CONFIG_PPP_ASYNC is not set
@@ -1518,8 +1518,14 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 CONFIG_WCNSS_CORE=y
+# CONFIG_WCNSS_MEM_PRE_ALLOC is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+# CONFIG_BCM4330 is not set
+# CONFIG_BCM4334 is not set
+# CONFIG_BCM4335 is not set
+# CONFIG_BCM43241 is not set
+CONFIG_BCMDHD_FW_PATH=""
+CONFIG_BCMDHD_NVRAM_PATH=""
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -2201,10 +2207,6 @@ CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_DB8131M=y
-CONFIG_ISX012=y
-CONFIG_MSM_CAMERA_FLASH_SC628A=y
-CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 
 #
@@ -2300,8 +2302,6 @@ CONFIG_USB_GSPCA=m
 # CONFIG_VIDEO_PVRUSB2 is not set
 # CONFIG_VIDEO_HDPVR is not set
 # CONFIG_VIDEO_EM28XX is not set
-# CONFIG_VIDEO_CX231XX is not set
-# CONFIG_VIDEO_TM6000 is not set
 # CONFIG_VIDEO_USBVISION is not set
 # CONFIG_USB_ET61X251 is not set
 # CONFIG_USB_SN9C102 is not set
@@ -2319,24 +2319,35 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_V4L2=y
+
+#
+# Camera Sensor Selection
+#
+CONFIG_ISX012=y
+# CONFIG_S5C73M3 is not set
+# CONFIG_S5K6A3YX is not set
+# CONFIG_S5K8AAY is not set
+# CONFIG_MT9M114 is not set
+# CONFIG_IMX074_ACT is not set
+# CONFIG_S5K4E1 is not set
+CONFIG_MSM_CAMERA_FLASH_SC628A=y
+# CONFIG_IMX072 is not set
+CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_ACTUATOR=y
 CONFIG_MSM_GEMINI=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
-CONFIG_MSM_MERCURY=y
 
 #
 # Camera Sensor Selection
 #
-# CONFIG_S5C73M3 is not set
-# CONFIG_S5K6A3YX is not set
-# CONFIG_S5K8AAY is not set
-# CONFIG_IMX072 is not set
-
-#
-# Camera Sensor Selection
-#
+# CONFIG_S5K4ECGX is not set
+# CONFIG_S5K5CCGX is not set
+CONFIG_DB8131M=y
+# CONFIG_SR030PC50 is not set
+# CONFIG_S5K3L1YX is not set
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
+# CONFIG_OV7692 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_MSM_WFD=y
 # CONFIG_RADIO_ADAPTERS is not set
@@ -2626,7 +2637,6 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9304=y
 CONFIG_SND_SOC_WCD9310=y
-# CONFIG_SND_SOC_CS8427 is not set
 CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SOC_TPA2028D is not set
 # CONFIG_SOUND_PRIME is not set
@@ -3177,6 +3187,9 @@ CONFIG_PRIMA_WLAN=m
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
+# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+# CONFIG_WLAN_FEATURE_11W is not set
+# CONFIG_QCOM_VOWIFI_11R is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -3207,6 +3220,8 @@ CONFIG_VIBETONZ=y
 #
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_MSM_IOMMU=y
+# CONFIG_MSM_IOMMU_GPU_SYNC is not set
+CONFIG_IOMMU_PGTABLES_L2=y
 
 #
 # Remoteproc drivers (EXPERIMENTAL)
@@ -3485,6 +3500,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ARM_UNWIND=y
+CONFIG_OLD_MCOUNT=y
 CONFIG_DEBUG_USER=y
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
@@ -3502,7 +3518,6 @@ CONFIG_SEC_DEBUG_SUBSYS=y
 # CONFIG_SEC_DEBUG_DCVS_LOG is not set
 # CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
 # CONFIG_SEC_DEBUG_LOW_LOG is not set
-CONFIG_EARLY_PRINTK=y
 CONFIG_PID_IN_CONTEXTIDR=y
 
 #
