Enable GPU sync and HW_AVS

--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -436,7 +436,7 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-# CONFIG_MSM_AVS_HW is not set
+CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
@@ -3220,7 +3220,7 @@ CONFIG_VIBETONZ=y
 #
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_MSM_IOMMU=y
-# CONFIG_MSM_IOMMU_GPU_SYNC is not set
+CONFIG_MSM_IOMMU_GPU_SYNC=y
 CONFIG_IOMMU_PGTABLES_L2=y
 
 #
