--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -514,7 +514,7 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
 CONFIG_MSM_CACHE_ERP=y
-CONFIG_MSM_L1_ERR_PANIC=y
+# CONFIG_MSM_L1_ERR_PANIC is not set
 # CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 # CONFIG_MSM_L1_ERR_LOG is not set
 # CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
