ApexQ does not have DSPS

--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -461,7 +461,7 @@ CONFIG_MSM_PIL_LPASS_QDSP6V5=y
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
 CONFIG_MSM_PIL_RIVA=y
 CONFIG_MSM_PIL_TZAPPS=y
-CONFIG_MSM_PIL_DSPS=y
+# CONFIG_MSM_PIL_DSPS is not set
 CONFIG_MSM_PIL_VIDC=y
 # CONFIG_MSM_PIL_VENUS is not set
 # CONFIG_MSM_PIL_GSS is not set
