--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -1518,7 +1518,7 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 CONFIG_WCNSS_CORE=y
-# CONFIG_WCNSS_MEM_PRE_ALLOC is not set
+CONFIG_WCNSS_MEM_PRE_ALLOC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4334 is not set
