--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -486,7 +486,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CPU_MAX_CLK_1DOT2GHZ is not set
 CONFIG_MSM_DCVS_FOR_MSM8260A=y
 # CONFIG_SEC_PERIPHERAL_SECURE_CHK is not set
-# CONFIG_SEC_L1_DCACHE_PANIC_CHK is not set
+CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
 # CONFIG_SEC_SSR_DEBUG_LEVEL_CHK is not set
 CONFIG_MSM_DCVS=y
 CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS=y
