--- a/arch/arm/configs/cyanogen_apexq_defconfig
+++ b/arch/arm/configs/cyanogen_apexq_defconfig
@@ -386,6 +386,9 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
+CONFIG_MSM_HAS_DEBUG_UART_HS=y
+CONFIG_DEBUG_MSM8960_UART=y
+# CONFIG_DEBUG_APQ8064_UART is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
@@ -1121,7 +1124,8 @@ CONFIG_BT_HIDP=y
 CONFIG_BT_HCISMD=y
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_MSM_SLEEP is not set
